--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,14 +3,46 @@
  on: [push, pull_request]
  
  jobs:
+   job-with-mysql-5_7:
+    runs-on: ubuntu-20.04
+    services:
+      db:
+        image: mysql:5.7
+        ports:
+          - 3306:3306
+        env:
+          MYSQL_ROOT_PASSWORD: root_password
+          MYSQL_DATABASE: foo
+          MYSQL_USER: user1
+          MYSQL_PASSWORD: user1_password
+          DB_NAME: medical
+        options: >-
+          --health-cmd "mysqladmin ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - name: Show Docker containers
+        run: docker ps -a
+      - name: Show databases for root user
+        run: mysql --protocol=tcp -h localhost -P 3306 -u root -proot_password -e "SHOW DATABASES"
+      - name: Show databases for user1
+        run: mysql --protocol=tcp -h localhost -P 3306 -u user1 -puser1_password -e "SHOW DATABASES"
+      - name: Crate database
+        run: mysql -e 'CREATE DATABASE ${{DB_NAME}};' -u${{ MYSQL_USER }} -p${{ MYSQL_PASSWORD }}
+      - name: Create env file
+      - shell: bash
+        run: |
+          touch .env
+          echo "DATABASE_URL=mysql://root:${{MYSQL_ROOT_PASSWORD}}@localhost:3306/${{DB_NAME}}"
    build_for_linux_and_operational_test:
-     runs-on: ubuntu-18.04
+     runs-on: ubuntu-20.04
      steps:
      - uses: actions/checkout@v2
      - name: Build
        run: |
          set -eux
-         docker run --rm -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder:1.46.0 sh -c 'sudo chown -R rust:rust . && cargo build --release'
+         docker run --rm -it -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder:1.46.0 sh -c 'sudo chown -R rust:rust . && cargo install sqlx-cli && sqlx migrate---------------- run && cargo build --release'
          sudo chown -R $USER:$USER .
      - name: Archive
        run: |
@@ -45,7 +77,7 @@
  
    release_if_tag_exits:
      needs: [build_for_linux_and_operational_test, build_for_mac]
-     runs-on: ubuntu-18.04
+     runs-on: ubuntu-20.04
      steps:
      - name: Extract tag name
        shell: bash
