--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,12 +37,9 @@
         run: |
           touch .env
           echo "DATABASE_URL=mysql://root:${{env.MYSQL_ROOT_PASSWORD}}@localhost:3306/${{env.DB_NAME}}"
-   
+      - uses: rust-build/rust-build.action@1.4.0 
       - name: Build
-        run: |
-          set -eux
-          docker run --rm -it -v "$(pwd)":/home/rust/src ekidd/rust-musl-builder:1.46.0 sh -c 'sudo chown -R rust:rust . && cargo build --release'
-          sudo chown -R $USER:$USER .
+        run: 
       - name: Archive
         run: |
           set -eux
@@ -100,7 +97,7 @@
           path: patient-manage-x86-64-apple-darwin.*
   
   release_if_tag_exits:
-    needs: [build_for_linux_and_operational_test, build_for_mac]
+    needs: [build_for_linux_and_operational_test]
     runs-on: ubuntu-20.04
     steps:
       - name: Extract tag name
@@ -112,10 +109,6 @@
         uses: actions/download-artifact@v2
         with:
           name: ${{ github.sha }}-linux-artifacts
-      - name: Download the artifact (macOS)
-        uses: actions/download-artifact@v2
-        with:
-          name: ${{ github.sha }}-mac-artifacts
       - name: Release
         if: contains(github.ref, 'refs/tags/')
         run: |
@@ -123,8 +116,6 @@
           hub release create \
             -a patient-manage-x86-64-linux.tar.gz \
             -a patient-manage-x86-64-linux.zip \
-            -a patient-manage-x86-64-apple-darwin.tar.gz \
-            -a patient-manage-x86-64-apple-darwin.zip \
             -m "Release ${{ steps.extract_tag.outputs.tag }}" ${{ steps.extract_tag.outputs.tag }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}# Paste your workflow YAML to this code editor
